# intentionally-blank

./: .bumpversion.cfg  .gitignore  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: actions.yml
source/intentionally_blank/: __init__.py  api.py  cli.py  extension.py  formatter.py  les_iterables.py  text.py  version.py
source/intentionally_blank/ext/formatters/empty/: __init__.py  formatter.py
source/intentionally_blank/ext/formatters/eof_newline/: __init__.py  formatter.py
source/intentionally_blank/ext/formatters/identity/: __init__.py  formatter.py
source/intentionally_blank/ext/formatters/leading/: __init__.py  formatter.py
source/intentionally_blank/ext/formatters/python_leading/: __init__.py  formatter.py
source/intentionally_blank/ext/formatters/remove_trailing/: __init__.py  formatter.py
source/intentionally_blank/ext/formatters/remove_trailing_lines/: __init__.py  formatter.py
source/intentionally_blank/ext/formatters/visible/: __init__.py  formatter.py
tests/: conftest.py  godkjenn.toml  pytest.ini  test_cli.py
tests/data/: airtravel_empty.py  airtravel_empty.py.txt  airtravel_leading.py  airtravel_leading.py.txt  airtravel_ragged.py  airtravel_ragged.py.txt  airtravel_trailing.py.txt  airtravel_with_trailing_empty_lines.py.txt  airtravel_without_eof_newline.py  airtravel_without_eof_newline.py.txt  flatten_010.py
tests/ext/empty/: test_empty.py
tests/ext/eof_newline/: test_eof_newline.py
tests/ext/identity/: test_identity.py
tests/ext/leading/: test_leading.py
tests/ext/python_leading/: test_leading.py
tests/ext/remove_trailing/: test_remove_trailing.py
tests/ext/remove_trailing_lines/: test_remove_trailing_lines.py
tests/ext/visible/: test_visible.py
