[metadata]
name = intentionally-blank
version = attr: intentionally_blank.version.__version__
description = A tool for indentation in text files
long_description = file: README.rst, LICENSE.txt
long_description_content_type = text/x-rst
url = https://github.com/sixty-north/intentionally-blank
author = Sixty North AS
author_email: systems+intentionally_blankt@sixty-north.com
keywords = whitespace
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
include_package_data = False
package_dir =
    =source
packages = find:
install_requires =
    stevedore
    click
    exit_codes
    asq
    more-itertools

[options.extras_require]
dev = black ; bumpversion ; twine ; build
doc = sphinx ; sphinx_rtd_theme ; better_apidoc
test = pytest ; hypothesis ; tox


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    intentionally-blank = intentionally_blank.cli:cli
intentionally_blank.formatter =
    identity = intentionally_blank.ext.formatters.identity:Formatter
    leading = intentionally_blank.ext.formatters.leading:Formatter
    empty = intentionally_blank.ext.formatters.empty:Formatter
    visible = intentionally_blank.ext.formatters.visible:Formatter
    eof-newline = intentionally_blank.ext.formatters.eof_newline:Formatter
    python-leading = intentionally_blank.ext.formatters.python_leading:Formatter
    remove-trailing = intentionally_blank.ext.formatters.remove_trailing:Formatter
